<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ChattingAct">

    <TextView
        android:id="@+id/ketikPemesan"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/title_box"
        android:gravity="center"
        android:text="@string/testChattin"
        android:textColor="@color/compact01"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="wrap_content"
        tools:layout_editor_absoluteY="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lagiChatting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/ketikPemesan"
        app:layout_constraintBottom_toTopOf="@id/panelChat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        android:contentDescription="@string/pesanChat"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/panelChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp"
        android:background="@drawable/panel_sending"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/chatBerpesan"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/input_berpesan"
            android:hint="@string/chatType"
            android:padding="12dp"
            android:textColorHint="?attr/colorSecondaryVariant"
            android:textColor="?attr/colorSecondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/mauKirim"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill,TextFields,VisualLintTextFieldSize,TextContrastCheck" />

        <Button
            android:id="@+id/mauKirim"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:text="@string/chatSend"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:background="@drawable/send_btn"
            app:layout_constraintBottom_toBottomOf="@id/chatBerpesan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/chatBerpesan"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>