<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".MainActivity">

    <!-- HEADER -->
    <TextView
        android:id="@+id/judulApp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/title_box"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/app_name"
        android:textAppearance="@style/BoldText"
        android:textColor="@color/white"
        android:textSize="32sp"
        tools:ignore="MissingConstraints,TextSizeCheck,TextContrastCheck" />

    <!-- RECYCLERVIEW -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/liatList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/judulApp"
        app:layout_constraintBottom_toTopOf="@id/menuBawah"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/semuaUser" />

    <LinearLayout
        android:id="@+id/menuBawah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@drawable/title_box"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Button Kiri -->
        <Button
            android:id="@+id/liaTeman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="115dp"
            android:text="@string/namaFren"
            android:textStyle="bold"
            android:textColor="@color/darkNess"
            android:background="@drawable/friend_btn"/>

        <!-- Switch Kanan -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sakelarEnvor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginEnd="0dp"
            android:layout_gravity="end|center_vertical"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:track="@drawable/switch_track" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>